--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,9 @@
 		  	<b>2025</b>
 		  	<li>Mengxuan Hu, Zihan Guan, Junfeng Guo, Zhongliang Zhou, Jielu Zhang, and <b>Sheng Li</b>. BBCaL: Black-box Backdoor Detection under the Causality Lens. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2025. (<b>Featured Certification</b>)</li>
 		  	<li><b>Sheng Li</b>. Trustworthy AI Meets Educational Assessment: Challenges and Opportunities. <i>The 39th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2025. (Senior Member Track)</li>
+		  	<li>Zihan Guan*, Mengxuan Hu*, <b>Sheng Li</b>, and Anil Kumar Vullikanti. UFID: A Unified Framework for Black-box Input-level Backdoor Detection on Diffusion Models. <i>The 39th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2025. (AI Alignment Track; * indicates equal contribution)</li>
+		  	<li>Huibo Yang, Mengxuan Hu, Amoreena Most, Brian Murray, Susan Smith, Anthony Hawkins, <b>Sheng Li</b>, and Andrea Sikora. Evaluating Accuracy and Reproducibility of Large Language Model Performance on Critical Care Assessments in Pharmacy Education. <i>Frontiers in Artificial Intelligence</i>, 2025.</li>
+		  	<li>Mei Yang, Dongliang Guo, <b>Sheng Li</b>, Steven Binder, Cole Sterck, and Mable Fok. Motion Reconstruction of an Inchworm Inspired Soft Robotic Climber Using Fiber Optic Sensors and Neural Network. <i>Optical Fiber Communications (<b>OFC</b>) Conference</i>, 2025.</li>
 			<p></p>
 		  	
 		  	<b>2024</b>
@@ -103,7 +106,7 @@
 		  	<li>Daiqing Qi, Handong Zhao, and <b>Sheng Li</b>. Easy Regional Contrastive Learning of Expressive Visual Fashion Representations. <i>The Thirty-Eighth Annual Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2024.</i>
 		  	<li>Daiqing Qi, Handong Zhao, Aidong Zhang, and <b>Sheng Li</b>. Generalizing to Unseen Domains via Text-guided Augmentation: A Training-free Approach, <i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2024.</li>
 		  	<li>Daiqing Qi, Handong Zhao, Zijun Wei, and <b>Sheng Li</b>. Tag-grounded Visual Instruction Tuning with Retrieval Augmentation. <i>The Conference on Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2024.</li>
-		  	<li>Yu Wang, Ronghang Zhu, Pengsheng Ji, and <b>Sheng Li</b>. Open-Set Graph Domain Adaptation via Separate Domain Alignment. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024. [<a href="https://github.com/YuWang916/Graph-OSDA" target="_blank">Code</a>]</li>
+		  	<li>Yu Wang*, Ronghang Zhu*, Pengsheng Ji, and <b>Sheng Li</b>. Open-Set Graph Domain Adaptation via Separate Domain Alignment. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024. (* indicates equal contribution) [<a href="https://github.com/YuWang916/Graph-OSDA" target="_blank">Code</a>]</li>
 			<li>Zhixuan Chu, Mengxuan Hu, Qing Cui, Longfei Li, and <b>Sheng Li</b>. Task-Driven Causal Feature Distillation: Towards Trustworthy Risk Prediction. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
 			<li>Yan Wang, Zhixuan Chu, Xin Ouyang, Simeng Wang, Hongyan Hao, Yue Shen, Jinjie Gu, Siqiao Xue, James Zhang, Qing Cui, Longfei Li, Jun Zhou, and <b>Sheng Li</b>. LLMRG: Improving Recommendations through Large Language Model Reasoning Graphs. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
 			<li>Zihan Guan, Mengxuan Hu, Zhongliang Zhou, Jielu Zhang, <b>Sheng Li</b>, and Ninghao Liu. BadSAM: Exploring Security Vulnerabilities of SAM via Backdoor Attacks. (Student Abstract) <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
