--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
           <ul class="" style="font-size:15px">
             <li>
               <b>Panelist</b>: NSF (III, RI, OAC, NAIRI, CRII, GRFP), CDC</li>  
+	   <li>
+              <b>Senior Associate Editor</b>: IEEE Trans. on Circuits and Systems for Video Technology (2025 - )</li>
             <li>
-              <b>Associate Editor</b>: Transactions on Machine Learning Research (2024 - ), IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Trans. Cognitive and Developmental Systems (2024 - ), IEEE Trans. on Circuits and Systems for Video Technology (2021 - ), IEEE Trans. Consumer Electronics (2024 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
+              <b>Associate Editor</b>: Transactions on Machine Learning Research (2024 - ), IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Trans. Cognitive and Developmental Systems (2024 - ), IEEE Trans. on Circuits and Systems for Video Technology (2021 - 2024), IEEE Trans. Consumer Electronics (2024 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
 			<li>
 			 <b>Editorial Board Member</b>: Frontiers in Signal Processing (2021 - 2023), Neural Computing and Applications (2017 - 2023)</li>
             <li><b>Program Chair</b>: <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">NeurIPS-FM-EduAssess</a> (2024), <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">CVPR-AMFG</a> (2021), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank">IJCAI-Tusion</a> (2020), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank">IJCAI-Tusion</a> (2019), <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank">CVPR-AMFG</a> (2019)</li>
