--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,8 @@
             <b>Papers</b>
           <ol class="" style="font-size:15px">
 		  	<b>2025</b>
+		  	<li>Guangya Wan, Yuqi Wu, Jie Chen, and <b>Sheng Li</b>. RASC: Reasoning-Aware Self-Consistency for Efficient and Faithful LLM Reasoning. <i>The Annual Conference of the Nations of the Americas Chapter of the ACL (<b>NAACL</b>)</i>, 2025.</li>
+		  	<li>Mengxuan Hu*, Zihan Guan*, Yi Zeng, Junfeng Guo, Zhongliang Zhou, Jielu Zhang, Ruoxi Jia, Anil Kumar Vullikanti, and <b>Sheng Li</b>. Mind Control through Causal Inference: Predicting Clean Images from Poisoned Data. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025. (* indicates equal contribution)</li>
 		  	<li>Mengxuan Hu, Zihan Guan, Junfeng Guo, Zhongliang Zhou, Jielu Zhang, and <b>Sheng Li</b>. BBCaL: Black-box Backdoor Detection under the Causality Lens. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2025. (<b>Featured Certification</b>)</li>
 		  	<li><b>Sheng Li</b>. Trustworthy AI Meets Educational Assessment: Challenges and Opportunities. <i>The 39th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2025. (Senior Member Track)</li>
 		  	<li>Zihan Guan*, Mengxuan Hu*, <b>Sheng Li</b>, and Anil Kumar Vullikanti. UFID: A Unified Framework for Black-box Input-level Backdoor Detection on Diffusion Models. <i>The 39th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2025. (AI Alignment Track; * indicates equal contribution)</li>
