--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>01/2025, One paper on reasoning-aware self-consistency for efficient and faithful LLM reasoning is accepted at NAACL 2025.</li> 
+		  	<li>01/2025, One paper on training clean models from poisoned datasets with causal analysis is accepted at ICLR 2025.</li> 
 		  	<li>12/2024, I am appointed as a Senior Associate Editor for IEEE Trans. on Circuits and Systems for Video Technology.</li> 
 		  	<li>12/2024, Received a <strong>Merck Grant</strong> to support our research on foundation models.</li> 
 		  	<li>12/2024, One paper on black-box input-level backdoor detection on diffusion models is accepted at the AI Alignment Track of AAAI 2025.</li>
