--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		  
           <p class="" style="font-size:15px">
             <b class="text-capitalize">Short Bio</b>: Sheng Li is a Quantitative Foundation Associate Professor of <a href="http://datascience.virginia.edu/" target="_blank">Data Science</a> and an Associate Professor of Computer Science (by courtesy) at 
-		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. His recent research interests include Trustworthy AI, Causal Inference, Large Foundation Models, and Vision-Language Modeling. He has published over 170 papers, and has received over 10 research awards, such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award, and SDM Best Paper Award. He currently serves as Associate Editor for six journals such as Transactions on Machine Learning Research (TMLR) and IEEE Trans. Neural Networks and Learning Systems (TNNLS), and serves as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
+		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. His recent research interests include Trustworthy AI, Causal Inference, Large Foundation Models, and Vision-Language Modeling. He has published over 180 papers, and has received over 10 research awards, such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award, and SDM Best Paper Award. He currently serves as Associate Editor for six journals such as Transactions on Machine Learning Research (TMLR) and IEEE Trans. Neural Networks and Learning Systems (TNNLS), and serves as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
         <div class="col-md-12">
           <ul class="" style="font-size:15px">
             <li>
-              <b>Panelist</b>: NSF (III, RI, OAC, NAIRI, CRII, GRFP), CDC</li>  
+              <b>Panelist</b>: NSF (III, RI, OAC, NAIRI, CRII, GRFP), CDC, NSERC, QRDI, RGC</li>  
 	   <li>
               <b>Senior Associate Editor</b>: IEEE Trans. on Circuits and Systems for Video Technology (2025 - )</li>
             <li>
